--- a/deepfake-app/src/styles/App.css
+++ b/deepfake-app/src/styles/App.css
@@ -41,6 +41,36 @@
 
 /* -------------------HEADER---------------------- */
 
+
+nav, .nav-links {
+  display: flex;
+}
+
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh; /* veiw height of the screen */
+}
+
+.nav-links {
+  gap: 2rem; 
+  list-style: none;
+  font-size: 1.5rem; 
+}
+
+.nav-links li:hover {
+  color: grey;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color: rgb(181, 181, 181);
+
+}
+
+.nav-links a:link {
+  text-decoration: none; 
+  color: black;
+}
+
 /* -------------------FOOTER---------------------- */
 
 /* -------------------RESULTCARD---------------------- */
@@ -63,4 +93,38 @@
 .img-upload {
   width: 18rem;
 }
+
+body {
+  background-color: #f9f9f9;
+  display: flex;
+  justify-content: center;
+}
+
+.main-card {
+  background: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+  padding: 20px;
+  overflow: hidden;
+  border: none;
+}
+
+.image-upload input[type="file"] {
+  margin: 10px 0;
+  padding: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  color: #007bff;
+  background: #f9f9f9;
+  transition: all 0.3s ease;
+}
+
+.image-upload input[type="file"]:hover {
+  background: #007bff;
+  color: white;
+}
+
+
 
