--- a/deepfake-app/src/styles/App.css
+++ b/deepfake-app/src/styles/App.css
@@ -71,13 +71,24 @@ nav {
   color: black;
 }
 
+.logo {
+  width: 4rem;
+  height: 4rem;
+}
+
 /* -------------------FOOTER---------------------- */
+footer {
+  /* clear: both; */
+  /* position: relative; */
+  /* height: 200px; */
+  margin-top: 250px;
+}
 
 /* -------------------RESULTCARD---------------------- */
-/* .imageAnalysis {
+.imageAnalysis {
   display: flex;
   justify-content: center;
-} */
+}
 
 .card-container {
   width: 18rem;
