--- a/deepfake-app/src/styles/App.css
+++ b/deepfake-app/src/styles/App.css
@@ -1,46 +1,5 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/* -------------------END OF DEFAULT---------------------- */
 
 /* -------------------HEADER---------------------- */
-
 
 .nav-links {
   list-style: none; 
@@ -59,7 +18,7 @@
 }
 
 .nav-links li a:hover {
-  color: grey; 
+  color: #007bff; 
   text-decoration: underline;
 }
 
@@ -108,6 +67,7 @@
 
 .footer-button a:hover {
   text-decoration: underline;
+  color:#007bff;
 }
 
 body {
@@ -121,22 +81,6 @@ body {
 main {
   flex: 1; 
 }
-
-/* -------------------RESULTCARD---------------------- */
-/* .imageAnalysis {
-  display: flex;
-  justify-content: center;
-}
-
-.card-container {
-  width: 30rem;
-  border-style: solid;
-}
-
-.card-img {
-  width: 100%;
-  height: auto;
-} */
 
 /* -------------------MAINPAGE---------------------- */
 .main-card {
@@ -206,10 +150,11 @@ input[type="file"]:focus {
 }
 
 .card-img {
-  max-height: 300px; 
-  object-fit: cover; 
-  border-bottom: 1px solid #ddd; 
-}
+  width: 100%;
+  max-height: 500px; 
+  object-fit: contain;
+  /* height: auto; */
+} 
 
 .list-group-item {
   font-weight: bold; 
